# dbt-workshop

./: pyproject.toml
workshop-1/: dbt_project.yml
workshop-1/dev/: catalog.json  graph.gpickle  manifest.json  partial_parse.pickle  run_results.json
workshop-1/dev/compiled/workshop/data_test/: assert_averages_are_unique.sql
workshop-1/dev/compiled/workshop/schema_test/: not_null_customer_nation_region_aggregates_nation_key.sql  not_null_customer_nation_region_nation_key.sql  not_null_supplier_parts_nation_key.sql  not_null_supplier_parts_part_key.sql  not_null_supplier_parts_part_key_NUMBER.sql  not_null_supplier_parts_supplier_key.sql  relationships_customer_nation_region_aggregates_067c9ea2e0808fa63e3f35cc0991ecb2.sql  unique_customer_nation_region_aggregates_concat_nation_key_customer_name_.sql  unique_customer_nation_region_concat_nation_customer_name_.sql  unique_supplier_parts_66f17bfe3bd20358810eae0a7aaf98e7.sql
workshop-1/dev/compiled/workshop/tpc_h/: analytics_view.sql  average_account_balance_by_part_and_supplier.sql  average_acctbal_by_nation.sql  average_supply_cost_and_available_quantity_per_part.sql  customer_nation_region.sql  customer_nation_region_aggregates.sql  supplier_parts.sql  supplier_parts_aggregates.sql
workshop-1/dev/run/workshop/tpc_h/: analytics_view.sql  average_account_balance_by_part_and_supplier.sql  (+6 more)
workshop-1/models/tpc_h/: average_account_balance_by_part_and_supplier.sql  average_acctbal_by_nation.sql  average_supply_cost_and_available_quantity_per_part.sql  customer_nation_region.sql  schema.yml  supplier_parts.sql
